add user inquiries & some changes

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@200;300;400;500;600&family=Fjalla+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Epilogue:wght@200;300;400;500;600&family=Imbue:opsz,wght@10..100,400;10..100,500;10..100,700&display=swap"
       rel="stylesheet"
     />
     <title>portfolio</title>
   </head>
   <body>
     <div id="app"></div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
