--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Epilogue:wght@200;300;400;500;600&family=Imbue:opsz,wght@10..100,400;10..100,500;10..100,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Teko&display=swap"
       rel="stylesheet"
     />
     <title>portfolio</title>
